--- a/style.css
+++ b/style.css
@@ -281,7 +281,6 @@ section {
 .about-containers,
 .about-details-container {
     display: flex;
-    flex-wrap: wrap;
 }
 
 .about-pic {
@@ -365,6 +364,8 @@ article .icon {
 .project-containers {
     max-width: 80rem;
     margin: auto;
+    padding-top: 3vh;
+    flex-wrap: wrap;
 }
 
 .color-container {
